# archived-lang

./: CMakeLists.txt  LICENSE  README  README.md  main.cpp
.github/workflows/: ci.yml  codeql.yml  metrics.yml
include/: lexer.h
lang/: lang.h  lexer.cpp  parser.cpp
src/: lexer.cpp
tests/: lexer_t.cpp  test_lexer.cpp
tests/files/: test.qnta
